add some notes from Weiqun in response to some questions I asked.

--- a/UsersGuide/GNUmakefile
+++ b/UsersGuide/GNUmakefile
@@ -2,5 +2,8 @@ FILENAME = CastroRadUserGuide
 
 default:
 	pdflatex $(FILENAME)
+	pdflatex $(FILENAME)
+	pdflatex $(FILENAME)
+
 clean:
 	-rm $(FILENAME).aux $(FILENAME).out $(FILENAME).log 
